Fix play button spacing

--- a/app/assets/stylesheets/stations.css.scss
+++ b/app/assets/stylesheets/stations.css.scss
@@ -45,7 +45,7 @@
 						width: 400px;
 						font-size: 32px;
 					  text-shadow: 1px 1px 1px #000;
-					  padding: 5px 15px;
+					  padding: 5px 11px;
 					}
 					input[type=submit] {
 						width: 50px;
